[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Splitscreen.gd" type="Script" id=2]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="ViewportContainer1" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="VBoxContainer/ViewportContainer1"]
size = Vector2( 1024, 200 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Main" parent="VBoxContainer/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="Camera1" type="Camera" parent="VBoxContainer/ViewportContainer1/Viewport1"]
current = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 384.0
margin_right = 1024.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 4 )
color = Color( 0.945098, 0.0431373, 0.360784, 1 )

[node name="ViewportContainer2" type="ViewportContainer" parent="VBoxContainer"]
margin_top = 388.0
margin_right = 1024.0
margin_bottom = 772.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="VBoxContainer/ViewportContainer2"]
size = Vector2( 1024, 200 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2" type="Camera" parent="VBoxContainer/ViewportContainer2/Viewport2"]
current = true
